                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 23-04-2006 changed: "empty CURL created" logs from warning to debug level.
 - 23-04-2006 fixed: Application notification about last.fm trackchanges.
 - 23-04-2006 fixed: Seeking was enabled for media that doesn't support it (last.fm, shoutcast..)
 - 23-04-2006 fixed: Incorrect "CDDB" errormessage when unable to connect to a shoutcast station.
 - 23-04-2006 fixed: Playlist files (strm/pls) containing an url to an online playlist (asx/pls) would not play.
 - 23-04-2006 fixed: Parts of [ 1398400 ] Multiple Bugs (5): Karaoke, Audio, MP3 + CDG Playback.
 - 23-04-2006 fixed: [ 1395189 ] CDG Seeking loses sync,  [ 1450824 ] Lyrics Lose Sync on FF / RW. Stup duping bug reports already!
 - 23-04-2006 fixed: bug in samba port code for retrieving directory listing from old lanman servers. 
                     also reneabled large read requests with workaround for bug in windows servers as per samba.org.
 - 22-04-2006 fixed: Degree symbol wasn't displaying correctly in Settings->Weather->Temperature Units.
 - 22-04-2006 fixed: if user canceled caching during startup of a shoutcast playlist, when mplayer went to next file in playlist, user wasn't able to cancel next one.
 - 22-04-2006 fixed: entering a folder with invalid pls files (strm files names pls), would connect to the url specified
 - 22-04-2006 fixed/changed: old discontinued shoutcast 500 replaced with new system. all streams now available
 - 21-04-2006 removed: * All Songs item in library view.
 - 21-04-2006 fixed: Appearance of the degree symbol in Weather, System Information and the LCD.
 - 21-04-2006 fixed: [ 1447371 ] no karaoke over video.